force-app/main/default/objects/Address_Change_Request__c/Address_Change_Request__c.object-meta.xml
<CustomObject>
    <label>Address Change Request</label>
    <nameField>
        <displayFormat>ACR-{00000}</displayFormat>
        <label>Address Change Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>