force-app/main/default/objects/Address_Change_Request__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aadhar</fullName>
            </value>
            <value>
                <fullName>Pan Card</fullName>
            </value>
            <value>
                <fullName>Ration Card</fullName>
            </value>
            <value>
                <fullName>Driving License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>