force-app/main/default/objects/Address_Change_Request__c/fields/New_Address__c.field-meta.xml
<CustomField>
    <fullName>New_Address__c</fullName>
    <label>New Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>