force-app/main/default/objects/Address_Change_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document_Type__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Current_Address__c</columns>
    <columns>New_Address__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>